fix: Fix sidebar button layout

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -9,7 +9,7 @@
       {{ partial:partials/header }}
 
       <div class="flex mt-6">
-        <div class="w-64 lg:w-full lg:max-w-sm hidden md:block">
+        <div class="w-64 lg:w-full lg:max-w-xs hidden md:block">
           {{ partial:partials/sidebar }}
         </div>
         <div class="md:pl-16 flex-1 max-w-full w-0">
