feat: Add post on "cannot declare class because the name is already in use"

--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -57,6 +57,16 @@
   p {
     @apply mb-4 leading-7;
   }
+
+  ul, ol {
+    @apply pl-4 ml-4;
+  }
+  ul li {
+    @apply list-disc;
+  }
+  ol li {
+    @apply list-decimal;
+  }
 }
 
 a {
