--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -1,58 +1,61 @@
+<div class="sticky top-0 border-t-4 border-accent z-10"></div>
 <div
   class="relative"
   x-data="{ isOpen: false }"
   @keydown.escape="isOpen = false"
   @click.away="isOpen = false"
 >
-  <div
-    class="flex justify-between items-center py-6 md:justify-between md:space-x-10"
-  >
-    <div>
-      <a href="/" class="flex" aria-label="Owen Conti">
-        {{ partial:partials/logo }}
-      </a>
-    </div>
-
-    <div class="-mr-2 -my-2 md:hidden">
-      <button @click="isOpen = !isOpen" type="button" class="bg-white dark:bg-dark rounded-md p-2 inline-flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-        <span class="sr-only">Open menu</span>
-        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-    </div>
-
-    <nav class="hidden md:flex space-x-6">
-      {{ structure:navigation }}
-        <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
-          {{ title }}
+  <div class="w-full max-w-6xl mx-auto px-6">
+    <div
+      class="flex justify-between items-center py-6 md:justify-between md:space-x-10"
+    >
+      <div>
+        <a href="/" class="flex" aria-label="Owen Conti">
+          {{ partial:partials/logo }}
         </a>
-      {{ /structure:navigation }}
-    </nav>
-  </div>
-
-  <div x-cloak class="top-0 inset-x-0 z-10 mt-6 transition transform origin-top-right md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
-    <div class="relative rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-dark divide-y-2 divide-gray-50">
-      <div class="pt-5 pb-6 px-5">
-        <div class="absolute top-0 right-0 mr-3 mt-3">
-          <button  @click="isOpen = !isOpen" type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-600 hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-            <span class="sr-only">Close menu</span>
-            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-
-        <nav class="grid gap-6">
-          {{ structure:navigation }}
-            <a href="{{ url }}" class="text-base font-medium text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
-              {{ title }}
-            </a>
-          {{ /structure:navigation }}
-        </nav>
-
-        <div class="border-t border-gray-300 mt-4 pt-4">
-          {{ partial:partials/search }}
+      </div>
+  
+      <div class="-mr-2 -my-2 md:hidden">
+        <button @click="isOpen = !isOpen" type="button" class="bg-white dark:bg-dark rounded-md p-2 inline-flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+          <span class="sr-only">Open menu</span>
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+  
+      <nav class="hidden md:flex space-x-6">
+        {{ structure:navigation }}
+          <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
+            {{ title }}
+          </a>
+        {{ /structure:navigation }}
+      </nav>
+    </div>
+  
+    <div x-cloak class="top-0 inset-x-0 z-10 mt-6 transition transform origin-top-right md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
+      <div class="relative rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-dark divide-y-2 divide-gray-50">
+        <div class="pt-5 pb-6 px-5">
+          <div class="absolute top-0 right-0 mr-3 mt-3">
+            <button  @click="isOpen = !isOpen" type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-600 hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+              <span class="sr-only">Close menu</span>
+              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </div>
+  
+          <nav class="grid gap-6">
+            {{ structure:navigation }}
+              <a href="{{ url }}" class="text-base font-medium text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
+                {{ title }}
+              </a>
+            {{ /structure:navigation }}
+          </nav>
+  
+          <div class="border-t border-gray-300 mt-4 pt-4">
+            {{ partial:partials/search }}
+          </div>
         </div>
       </div>
     </div>
