fix: Update dark mode background to dark-darken

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -4,7 +4,7 @@
     <title>{{ title ?? 'Home' }} | Owen Conti</title>
     {{ partial:partials/head }}
   </head>
-  <body class="text-base text-dark bg-white dark:bg-dark dark:text-light">
+  <body class="text-base text-dark bg-white dark:bg-dark-darken dark:text-light">
     {{ partial:partials/header }}
 
     <div class="w-full max-w-6xl mx-auto px-6 flex mt-6">
