--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,5 +1,5 @@
 <article class="mb-6 pb-4">
-  <a href="{{ url }}" class="text-xl heading highlight-heading">{{ title }}</a>
+  <a href="{{ url }}" class="text-2xl heading highlight-heading">{{ title }}</a>
 
   <p class="mt-3 mb-2 text-sm text-gray-700 dark:text-gray-300">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
