--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -1,48 +1,50 @@
-<div class="sticky top-0 border-t-4 border-accent z-10"></div>
+<div class="sticky top-0 z-10 border-t-4 border-accent"></div>
 <div
   class="relative"
   x-data="{ isOpen: false }"
   @keydown.escape="isOpen = false"
   @click.away="isOpen = false"
 >
-  <div class="w-full max-w-6xl mx-auto px-6">
+  <div class="w-full max-w-6xl px-6 mx-auto">
     <div
-      class="flex justify-between items-center py-6 md:justify-between md:space-x-10"
+      class="flex items-center justify-between py-6 md:justify-between md:space-x-10"
     >
       <div class="w-64 lg:w-full lg:max-w-xs">
-        <a href="/" class="flex justify-between items-center" aria-label="Owen Conti">
+        <a href="/" class="flex items-center justify-between" aria-label="Owen Conti">
           {{ partial:partials/logo }}
         </a>
       </div>
   
-      <div class="-mr-2 -my-2 md:hidden">
-        <button @click="isOpen = !isOpen" type="button" class="bg-white dark:bg-dark rounded-md p-2 inline-flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-          <span class="sr-only">Open menu</span>
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
-  
-      <div class="h-10 p-2 md:h-auto md:p-0">
-        <nav class="hidden md:inline-flex space-x-6">
-          {{ structure:navigation }}
-            <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
-              {{ title }}
-            </a>
-          {{ /structure:navigation }}
-        </nav>
-        <div id="dark-mode-button" class="inline-block ml-2 md:ml-4 align-middle"></div>
+      <div class="flex items-center">
+        <div class="-my-2 -mr-2 md:hidden">
+          <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 bg-white rounded-md dark:bg-dark dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+            <span class="sr-only">Open menu</span>
+            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+          </button>
+        </div>
+    
+        <div class="h-10 p-2 md:h-auto md:p-0">
+          <nav class="hidden space-x-6 md:inline-flex">
+            {{ structure:navigation }}
+              <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
+                {{ title }}
+              </a>
+            {{ /structure:navigation }}
+          </nav>
+          <div id="dark-mode-button" class="inline-block ml-2 align-middle md:ml-4"></div>
+        </div>
       </div>
     </div>
   
-    <div x-cloak class="top-0 inset-x-0 z-10 mt-6 transition transform origin-top-right md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
-      <div class="relative rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-dark divide-y-2 divide-gray-50">
-        <div class="pt-5 pb-6 px-5">
-          <div class="absolute top-0 right-0 mr-3 mt-3">
-            <button  @click="isOpen = !isOpen" type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-600 hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+    <div x-cloak class="inset-x-0 top-0 z-10 mt-6 transition origin-top-right transform md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
+      <div class="relative bg-white divide-y-2 rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 dark:bg-dark divide-gray-50">
+        <div class="px-5 pt-5 pb-6">
+          <div class="absolute top-0 right-0 mt-3 mr-3">
+            <button  @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 rounded-md hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
               <span class="sr-only">Close menu</span>
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -56,7 +58,7 @@
             {{ /structure:navigation }}
           </nav>
   
-          <div class="border-t border-gray-300 mt-4 pt-4">
+          <div class="pt-4 mt-4 border-t border-gray-300">
             {{ partial:partials/search }}
           </div>
         </div>
