--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -17,7 +17,7 @@
   
       <div class="flex items-center">
         <div class="-my-2 -mr-2 md:hidden">
-          <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 bg-white rounded-md dark:bg-dark dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+          <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 bg-white rounded-md dark:bg-brand-dark dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-brand-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
             <span class="sr-only">Open menu</span>
             <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -28,7 +28,7 @@
         <div class="h-10 p-2 md:h-auto md:p-0">
           <nav class="hidden space-x-6 md:inline-flex">
             {{ structure:navigation }}
-              <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
+              <a href="{{ url }}" class="font-normal text-gray-800 hover:text-gray-900 dark:text-gray-200 dark:hover:text-white">
                 {{ title }}
               </a>
             {{ /structure:navigation }}
@@ -39,10 +39,10 @@
     </div>
   
     <div x-cloak class="inset-x-0 top-0 z-10 mt-6 transition origin-top-right transform md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
-      <div class="relative bg-white divide-y-2 rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 dark:bg-dark divide-gray-50">
+      <div class="relative bg-white divide-y-2 rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 dark:bg-brand-dark divide-gray-50">
         <div class="px-5 pt-5 pb-6">
           <div class="absolute top-0 right-0 mt-3 mr-3">
-            <button  @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 rounded-md hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+            <button  @click="isOpen = !isOpen" type="button" class="inline-flex items-center justify-center p-2 text-gray-600 rounded-md hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-brand-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
               <span class="sr-only">Close menu</span>
               <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
