--- a/resources/views/partials/_webmentions.antlers.html
+++ b/resources/views/partials/_webmentions.antlers.html
@@ -1,6 +1,6 @@
 {{ webmentions:count url="{ current_url }/" }}
   <section class="mt-8 prose">
-    <h3 class="heading highlight-heading">Thanks for reading!</h3>
+    <h3 class="heading">Thanks for reading!</h3>
 
     <div class="mt-4 md:flex">
       <div class="mt-4 md:mt-0">
