--- a/resources/css/button.css
+++ b/resources/css/button.css
@@ -1,3 +1,3 @@
 .accent-button {
-  @apply py-2 px-4 rounded-md border-2 border-accent heading text-white bg-accent inline-flex items-center hover:bg-white hover:border-white hover:text-accent focus:outline-none focus:bg-accent focus:text-white;
+  @apply py-2 px-4 rounded-md border-2 border-accent font-heading tracking-widest font-normal text-white bg-accent inline-flex items-center hover:bg-white hover:border-white hover:text-accent focus:outline-none focus:bg-accent focus:text-white;
 }
