--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,9 +1,9 @@
-<article class="mb-6 pb-4">
-  <a href="{{ url }}" class="text-2xl heading highlight-heading">{{ title }}</a>
+<article class="pb-4 mb-6">
+  <a href="{{ url }}" class="text-xl heading">{{ title }}</a>
 
-  <p class="mt-3 mb-2 text-sm text-gray-700 dark:text-gray-300">
+  <p class="mt-1 mb-3 text-xs text-gray-700 uppercase dark:text-gray-300">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-    under {{ category }}<a href="/category/{{ slug }}" class="text-gray-700 dark:text-gray-300 font-bold">{{ title }}</a>{{ /category }}
+    under {{ category }}<a href="/category/{{ slug }}" class="font-bold text-gray-700 dark:text-gray-300">{{ title }}</a>{{ /category }}
   </p>
 
   <p class="m-0">{{ excerpt }}</p>
