--- a/resources/views/templates/bookmarks.antlers.html
+++ b/resources/views/templates/bookmarks.antlers.html
@@ -1,5 +1,5 @@
 <div class="prose">
-  <h1 class="heading highlight-heading">Bookmarks</h1>
+  <h1 class="heading">Bookmarks</h1>
 
   {{ collection:bookmarks limit="500" sort="title:asc" as="bookmarks" }}
       {{ if no_results }}
