--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,7 +1,7 @@
-<h1 class="heading highlight-heading">{{ title }}</h1>
+<h1 class="heading">{{ title }}</h1>
 
-<div class="mb-8 text-sm text-gray-700 dark:text-gray-400">
-  <p class="mt-2 mb-0">
+<div class="mt-1 mb-8 text-xs text-gray-700 uppercase dark:text-gray-400">
+  <p class="mt-0">
     Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}" class="font-bold text-gray-700 dark:text-gray-300">{{ title }}</a>{{ /category }}.
   </p>
 </div>
